update case-details.njk to rename financial unit to finishing unit

--- a/src/server/tbcase-case-details/case-details.njk
+++ b/src/server/tbcase-case-details/case-details.njk
@@ -248,7 +248,7 @@
                     id: "fin-unit",
                     name: "fin-unit",
                     label: {
-                      text: "Financial Unit",
+                      text: "Finishing Unit",
                       classes: "govuk-label--s"
                     },
                     items: [
